--- a/styles/section.css
+++ b/styles/section.css
@@ -285,6 +285,15 @@ button:hover {
   }
   
 }
+@media (min-width: 992px){
+  iframe{
+    width: 50vw;
+    height: 60vh;
+}
+.editor-pick{
+  visibility: hidden;
+}
+}
 
 @media (min-width: 1200px) {
   h1{
