--- a/styles/grid.css
+++ b/styles/grid.css
@@ -35,6 +35,7 @@
 }
 .more {
   display: grid;
+  gap: 2rem;
 }
 .more-item {
   display: grid;
@@ -55,14 +56,14 @@
   color: #121212;
   font-size: 1.125rem;
   font-family: Georgia, "Times New Roman", Times, serif;
-  font-weight: 540;
+  font-weight: 500;
 }
 .opacity:hover {
   opacity: 0.5;
 }
-.editor {
+/* .editor {
   gap: 0.625rem;
-}
+} */
 .border-top {
   margin-top: 2rem;
   padding: 1.25rem 0;
@@ -81,7 +82,7 @@
   margin-top: 3.125rem;
   padding: 1.25rem 0;
   border-top: 0.0625rem solid;
-  width: 80vw;
+  /* width: 80vw; */
 }
 .links-header {
   display: flex;
@@ -253,10 +254,10 @@
     font-size: 0.6875;
     color: gray;
   }
-  .editor{
+  /* .editor{
     margin-left: -15.375rem;
     margin-top: 6.25rem;
-  }
+  } */
    .none{
     display: none;
    }
@@ -344,7 +345,10 @@
     color: gray;
   }
   .editor{
-    margin-left: .375rem;
+    /* margin-left: .375rem; */
+    display: grid;
+    justify-content: space-between;
+    /* grid-template-columns: repeat(3, 1fr); */
   }
    .none{
     display: block;
@@ -353,7 +357,7 @@
 
 @media(min-width:992px){
     .iframe-container{
-      width: 50vw;
+      width: 100%;
     }
     .grid-container {
       display: grid;
@@ -377,14 +381,15 @@
     .more-item {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
+      column-gap: 2rem;
       
     }
     .more1-item {
-      display: grid;
+      width: 30%;
     }
     .more1-item > img {
       width: 18vw;
-      height: 23vh;
+      /* height: 23vh; */
     }
     .left-link{
       display: block; 
