Amended overflow for header

--- a/styles/grid.css
+++ b/styles/grid.css
@@ -327,7 +327,7 @@
   }
   .more1-item {
     display: unset;
-    width: 30vw;
+    /* width: 30vw; */
     
   }
   .more1-item > img {
@@ -384,9 +384,9 @@
       column-gap: 2rem;
       
     }
-    .more1-item {
+    /* .more1-item {
       width: 30%;
-    }
+    } */
     .more1-item > img {
       width: 18vw;
       /* height: 23vh; */
