--- a/styles/header.css
+++ b/styles/header.css
@@ -20,7 +20,8 @@
   cursor: pointer;
 }
 
-.name {
+.name,
+.hidden {
   display: none;
 }
 
@@ -54,11 +55,6 @@
   background-color: rgba(234, 230, 230, 0.566);
   transition: all ease 1ms;
 }
-
-.name {
-  display: none;
-}
-
 .top-image {
   height: 30px;
   margin-top: 10px;
@@ -77,11 +73,6 @@
   font-size: 12px;
   text-decoration: none;
 }
-
-.hidden {
-  display: none;
-}
-
 .subscribe:hover,
 .login:hover {
   background-color: #326891;
@@ -96,14 +87,10 @@ h6 {
   color: rgb(203, 203, 203);
 }
 @media (min-width: 300px) {
-  .top-right .fa-magnifying-glass {
-    display: none;
-  }
-  .space {
-    display: none;
-  }
+  .top-right .fa-magnifying-glass,
+  .space,
   .subscribe,
-  .login {
+  .login{
     display: none;
   }
   .name {
@@ -131,9 +118,7 @@ h6 {
   }
 }
 @media(min-width: 996px){
-  .top-right .fa-magnifying-glass {
-    display: block;
-  }
+  .top-right .fa-magnifying-glass,
   .space {
     display: block;
   }
