--- a/styles/section.css
+++ b/styles/section.css
@@ -3,14 +3,16 @@
   margin: 0;
   box-sizing: border-box;
 }
+
 .sec-one-icons,
 .gift-icon {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 0.625rem 18.75rem 0.625rem 0px;
+  margin: 0.625rem 18.75rem 0.625rem 0;
 }
-.gift-img{
+
+.gift-img {
   width: 1.975rem;
 }
 
@@ -34,7 +36,7 @@ h1 {
   color: rgb(73, 71, 71);
   border-radius: 20px;
   padding: 3px;
-  margin: 10px 0px 10px 20px;
+  margin: 10px 0 10px 20px;
 }
 
 .gifts {
@@ -53,22 +55,26 @@ h1 {
 }
 
 .alan {
-  margin: 0.9375rem 0px 3.125rem 2rem;
+  margin: 0.9375rem 0 3.125rem 2rem;
   color: gray;
   width: 43.75rem;
 }
+
 .paragraph {
   max-width: 37.5rem;
   margin: auto;
 }
+
 .author {
   max-width: 37.5rem;
   margin: auto;
   text-decoration: none;
 }
-.authors-name{
+
+.authors-name {
   text-decoration: underline;
 }
+
 .author:hover {
   text-decoration: none;
 }
@@ -90,17 +96,20 @@ h1 {
 }
 
 .header2 {
-  padding: 1.25rem 0rem;
+  padding: 1.25rem 0;
   font-size: 1.25rem;
 }
+
 .to-float {
   width: 62.5rem;
   margin: auto;
 }
+
 .left {
   float: left;
   margin-left: 5vw;
 }
+
 .float.editor-pick {
   display: none;
   float: left;
@@ -108,6 +117,7 @@ h1 {
   margin-right: -6.25rem;
   margin-top: 12.5rem;
 }
+
 .edit-pick {
   border-bottom: 1px solid rgb(203, 203, 203);
   width: 15.625rem;
@@ -115,27 +125,31 @@ h1 {
   margin-bottom: 5px;
   font-size: 17px;
 }
+
 .float-2 {
   float: left;
   clear: left;
   margin-top: 15px;
 }
+
 .float-3 {
   float: left;
   width: 11.25rem;
   margin-top: 15px;
   padding: 10px;
 }
+
 .float-3:hover {
   text-decoration: underline;
 }
+
 .href {
   text-decoration: none;
   color: rgb(84, 83, 83);
 }
 
 .section-three {
-  max-width: 62.5rem; 
+  max-width: 62.5rem;
   margin: auto;
   padding-top: 50px;
 }
@@ -151,7 +165,6 @@ h1 {
 
 .larry {
   margin: 30px 0;
-  
 }
 
 .gravity {
@@ -186,7 +199,7 @@ h1 {
 }
 
 button {
-  margin-bottom:10px ;
+  margin-bottom: 10px;
   background-color: rgb(75, 130, 170);
   color: white;
   word-spacing: 2px;
@@ -205,13 +218,12 @@ button:hover {
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid gray;
   width: 9.3754rem;
   border: 1px solid rgb(231, 230, 230);
   color: rgb(73, 71, 71);
   border-radius: 20px;
   padding: 3px;
-  margin: 10px 0px 10px -50px;
+  margin: 10px 0 10px -50px;
 }
 
 .bottom-icons {
@@ -221,128 +233,150 @@ button:hover {
 .bottom-section-one {
   width: 100%;
 }
-@media (min-width: 300px){
-  
-  h1{
+
+@media (min-width: 300px) {
+  h1 {
     font-size: 2rem;
     width: 90vw;
   }
-  .sec-one-icons{
+
+  .sec-one-icons {
     width: 70vw;
   }
-  .alan{
+
+  .alan {
     width: 85vw;
     margin: 1rem auto;
   }
-  .paragraph{
+
+  .paragraph {
     width: 75vw;
     margin: auto;
     font-size: 1.1rem;
   }
-  .author{
+
+  .author {
     color: #242222;
     font-size: 0.85rem;
   }
-  .dennis{
+
+  .dennis {
     width: 92vw;
     margin: auto;
   }
-  .authors-date{
+
+  .authors-date {
     font-size: 0.75rem;
   }
-  .to-float{
+
+  .to-float {
     width: 92vw;
   }
-  .editor-pick{
+
+  .editor-pick {
     display: none;
   }
-  .larry-b{
+
+  .larry-b {
     margin-left: 1rem;
   }
-  .larry{
+
+  .larry {
     font-size: 0.575rem;
-    
   }
-  .font{
+
+  .font {
     margin-top: 1rem;
   }
-  
-  iframe{
+
+  iframe {
     width: 70vw;
     height: 70vh;
   }
-  .stanford{
+
+  .stanford {
     color: gray;
     font-size: 0.9rem;
     margin-bottom: -1rem;
   }
-  .version{
+
+  .version {
     font-size: 0.75rem;
   }
+
   .bottom-icon,
-  .gift{
+  .gift {
     margin-right: -1rem;
   }
-  h3{
+
+  h3 {
     font-size: 0.75rem;
   }
-  .space-astronomy{
+
+  .space-astronomy {
     font-size: 0.9123rem;
   }
- 
-  .links-logo{
+
+  .links-logo {
     width: 5rem;
   }
 }
-@media (min-width:768px){
-  .edit-display{
+
+@media (min-width: 768px) {
+  .edit-display {
     display: none;
   }
-  .editor{
+
+  .editor {
     display: flex;
     gap: 2rem;
   }
 }
-@media (min-width: 992px){
-  iframe{
+
+@media (min-width: 992px) {
+  iframe {
     width: 50vw;
     height: 60vh;
-}
+  }
 
-.edit-display{
-  display: block;
-}
-
+  .edit-display {
+    display: block;
+  }
 }
 
 @media (min-width: 1200px) {
-  h1{
+  h1 {
     line-height: 2rem;
     font-weight: 900;
     font-family: Georgia, 'Times New Roman', Times, serif;
-     
   }
-  .sec-one-icons{
+
+  .sec-one-icons {
     padding-left: 3.75rem;
   }
-  
-  .image{
+
+  .image {
     width: 80vw;
     margin: auto;
   }
-  .alan{
+
+  .alan {
     width: 80vw;
   }
-  .dennis{
-   margin-right: -16.875rem;
+
+  .dennis {
+    margin-right: -16.875rem;
   }
+
   .to-float {
     width: 62.5rem;
   }
+
   .left {
     float: left;
     margin-left: 15vw;
   }
+
   .float.editor-pick {
     display: block;
     float: left;
@@ -350,6 +384,7 @@ button:hover {
     margin-right: -6.25rem;
     margin-top: 12.5rem;
   }
+
   .edit-pick {
     border-bottom: 1px solid rgb(203, 203, 203);
     width: 15.625rem;
@@ -357,31 +392,30 @@ button:hover {
     margin-bottom: 5px;
     font-size: 17px;
   }
+
   .float-2 {
     float: left;
     clear: left;
     margin-top: 15px;
   }
+
   .float-3 {
     float: left;
     width: 11.25rem;
     margin-top: 15px;
     padding: 10px;
   }
-  .clear{
+
+  .clear {
     clear: left;
   }
- 
-  iframe{
+
+  iframe {
     width: 50vw;
     height: 60vh;
-  
   }
-  .links-logo{
+
+  .links-logo {
     width: 15vw;
   }
- 
-  
-
-
 }
